tests/baselines/reference/unusedSwitchStatment.errors.txt
tests/cases/compiler/unusedSwitchStatment.ts(2,10): error TS2678: Type '0' is not comparable to type '1'.
tests/cases/compiler/unusedSwitchStatment.ts(3,13): error TS6133: 'x' is declared but never used.
tests/cases/compiler/unusedSwitchStatment.ts(6,15): error TS6133: 'c' is declared but never used.
tests/cases/compiler/unusedSwitchStatment.ts(9,13): error TS6133: 'z' is declared but never used.
tests/cases/compiler/unusedSwitchStatment.ts(14,10): error TS2678: Type '0' is not comparable to type '2'.
tests/cases/compiler/unusedSwitchStatment.ts(16,10): error TS2678: Type '1' is not comparable to type '2'.


==== tests/cases/compiler/unusedSwitchStatment.ts (6 errors) ====
    switch (1) {
        case 0:
             ~
!!! error TS2678: Type '0' is not comparable to type '1'.
            let x;
                ~
!!! error TS6133: 'x' is declared but never used.
            break;
        case 1:
            const c = 1;
                  ~
!!! error TS6133: 'c' is declared but never used.
            break;
        default:
            let z = 2;
                ~
!!! error TS6133: 'z' is declared but never used.
    }
    
    
    switch (2) {
        case 0:
             ~
!!! error TS2678: Type '0' is not comparable to type '2'.
            let x;
        case 1:
             ~
!!! error TS2678: Type '1' is not comparable to type '2'.
            x++;
    }